<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The toolbar -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        />


    <!-- normal content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        >

        <TextView
            android:id="@+id/errorMessage"
            android:textSize="20sp"
            android:textColor="@color/darkTextColor"
            android:gravity="top|center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            tools:text="@string/errorMessage"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"

            android:text="@string/button_send" />

        <ProgressBar
            android:id="@+id/progressSpinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            />
    </LinearLayout>
</LinearLayout>
